tests/snapshots/snapshots__budget_tomli_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 15 → level 0 (11 words)

CHANGELOG.md
README.md
fuzzer/fuzz.py
profiler/profiler_script.py
scripts/use_setuptools.py
setup.py
src/tomli/__init__.py
src/tomli/_parser.py
src/tomli/_re.py
src/tomli/_types.py
tomllib.md
