tests/snapshots/snapshots__budget_tomli_src_tomli_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (985 words)

__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
     3→# Licensed to PSF under a Contributor Agreement.
     4→
     5→__all__ = ("loads", "load", "TOMLDecodeError")
     6→__version__ = "2.4.0"  # DO NOT EDIT THIS LINE MANUALLY. LET bump2version UTILITY DO IT
     8→from ._parser import TOMLDecodeError, load, loads
_parser.py
     7→import sys
     8→from types import MappingProxyType
    10→from ._re import (
    11→    RE_DATETIME,
    12→    RE_LOCALTIME,
    13→    RE_NUMBER,
    14→    match_to_datetime,
    15→    match_to_localtime,
    16→    match_to_number,
    17→)
    19→TYPE_CHECKING = False
    21→    from collections.abc import Iterable
    22→    from typing import IO, Any, Final
    24→    from ._types import Key, ParseFloat, Pos
    26→# Inline tables/arrays are implemented using recursion. Pathologically
    27→# nested documents cause pure Python to raise RecursionError (which is OK),
    28→# but mypyc binary wheels will crash unrecoverably (not OK). According to
    29→# mypyc docs this will be fixed in the future:
    30→# https://mypyc.readthedocs.io/en/latest/differences_from_python.html#stack-overflows
    31→# Before mypyc's fix is in, recursion needs to be limited by this library.
    32→# Choosing `sys.getrecursionlimit()` as maximum inline table/array nesting
    33→# level, as it allows more nesting than pure Python, but still seems a far
    34→# lower number than where mypyc binaries crash.
    35→MAX_INLINE_NESTING: Final = sys.getrecursionlimit()
    37→ASCII_CTRL: Final = frozenset(chr(i) for i in range(32)) | frozenset(chr(127))
    39→# Neither of these sets include quotation mark or backslash. They are
    40→# currently handled as separate cases in the parser functions.
    41→ILLEGAL_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t")
    42→ILLEGAL_MULTILINE_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t\n")
    44→ILLEGAL_LITERAL_STR_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    45→ILLEGAL_MULTILINE_LITERAL_STR_CHARS: Final = ILLEGAL_MULTILINE_BASIC_STR_CHARS
    47→ILLEGAL_COMMENT_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    49→TOML_WS: Final = frozenset(" \t")
    50→TOML_WS_AND_NEWLINE: Final = TOML_WS | frozenset("\n")
    51→BARE_KEY_CHARS: Final = frozenset(
    52→    "abcdefghijklmnopqrstuvwxyz" "ABCDEFGHIJKLMNOPQRSTUVWXYZ" "0123456789" "-_"
    53→)
    54→KEY_INITIAL_CHARS: Final = BARE_KEY_CHARS | frozenset("\"'")
    55→HEXDIGIT_CHARS: Final = frozenset("abcdef" "ABCDEF" "0123456789")
    57→BASIC_STR_ESCAPE_REPLACEMENTS: Final = MappingProxyType(
    58→    {
    59→        "\\b": "\u0008",  # backspace
    60→        "\\t": "\u0009",  # tab
    61→        "\\n": "\u000a",  # linefeed
    62→        "\\f": "\u000c",  # form feed
      →…
    71→class DEPRECATED_DEFAULT:
    76→class TOMLDecodeError(ValueError):
    86→
    87→    def __init__(
    88→        self,
    89→        msg: str | type[DEPRECATED_DEFAULT] = DEPRECATED_DEFAULT,
    90→        doc: str | type[DEPRECATED_DEFAULT] = DEPRECATED_DEFAULT,
    91→        pos: Pos | type[DEPRECATED_DEFAULT] = DEPRECATED_DEFAULT,
    92→        *args: Any,
    93→    ):
    94→        if (
    95→            args
    96→            or not isinstance(msg, str)
    97→            or not isinstance(doc, str)
    98→            or not isinstance(pos, int)
    99→        ):
   100→            import warnings
   101→
   102→            warnings.warn(
   103→                "Free-form arguments for TOMLDecodeError are deprecated. "
   104→                "Please set 'msg' (str), 'doc' (str) and 'pos' (int) arguments only.",
   105→                DeprecationWarning,
   106→                stacklevel=2,
   107→            )
   108→            if pos is not DEPRECATED_DEFAULT:
   109→                args = pos, *args
   110→            if doc is not DEPRECATED_DEFAULT:
   111→                args = doc, *args
   112→            if msg is not DEPRECATED_DEFAULT:
      →…
   137→def load …
   149→def loads …
   220→class Flags:
   222→
   223→    # Marks an immutable namespace (inline array or inline table).
   224→    FROZEN: Final = 0
   225→    # Marks a nest that has been explicitly created and can no longer
   226→    # be opened using the "[table]" syntax.
   227→    EXPLICIT_NEST: Final = 1
   228→
   229→    def __init__(self) -> None:
   230→        self._flags: dict[str, dict[Any, Any]] = {}
   231→        self._pending_flags: set[tuple[Key, int]] = set()
   232→
   233→    def add_pending(self, key: Key, flag: int) -> None:
   234→        self._pending_flags.add((key, flag))
   235→
   236→    def finalize_pending(self) -> None:
   237→        for key, flag in self._pending_flags:
   238→            self.set(key, flag, recursive=False)
   239→        self._pending_flags.clear()
   240→
   241→    def unset_all(self, key: Key) -> None:
   242→        cont = self._flags
   243→        for k in key[:-1]:
   244→            if k not in cont:
   245→                return
   246→            cont = cont[k]["nested"]
   247→        cont.pop(key[-1], None)
   248→
   249→    def set …
   260→    def is_ …
   278→class NestedDict:
   279→    def __init__(self) -> None:
   280→        # The parsed content of the TOML document
   281→        self.dict: dict[str, Any] = {}
   282→
   283→    def get_or_create_nest(
   284→        self,
   285→        key: Key,
   286→        *,
   287→        access_lists: bool = True,
   288→    ) -> dict[str, Any]:
   289→        cont: Any = self.dict
   290→        for k in key:
   291→            if k not in cont:
   292→                cont[k] = {}
   293→            cont = cont[k]
   294→            if access_lists and isinstance(cont, list):
   295→                cont = cont[-1]
   296→            if not isinstance(cont, dict):
   297→                raise KeyError("There is no nest behind this key")
   298→        return cont  # type: ignore[no-any-return]
   299→
   300→    def append_nest_to_list(self, key: Key) -> None:
   301→        cont = self.get_or_create_nest(key[:-1])
   302→        last_key = key[-1]
   303→        if last_key in cont:
   304→            list_ = cont[last_key]
   305→            if not isinstance(list_, list):
      →…
   312→class Output:
   313→    def __init__(self) -> None:
   314→        self.data = NestedDict()
   315→        self.flags = Flags()
   318→def skip_chars …
   327→def skip_until …
   349→def skip_comment …
   361→def skip_comments_and_array_ws …
   370→def create_dict_rule …
   390→def create_list_rule …
   413→def key_value_rule …
   447→def parse_key_value_pair …
   463→def parse_key …
   481→def parse_key_part …
   497→def parse_one_line_basic_str …
   502→def parse_array …
   528→def parse_inline_table …
   564→def parse_basic_str_escape …
   595→def parse_basic_str_escape_multiline …
   599→def parse_hex_char …
   612→def parse_literal_str …
   621→def parse_multiline_str …
   652→def parse_basic_str …
   684→def parse_value …
   760→def is_unicode_scalar_value …
   764→def make_safe_parse_float …
_re.py
     7→from datetime import date, datetime, time, timedelta, timezone, tzinfo
     8→from functools import lru_cache
     9→import re
    11→TYPE_CHECKING = False
    13→    from typing import Any, Final
    15→    from ._types import ParseFloat
    17→_TIME_RE_STR: Final = r"""
    18→([01][0-9]|2[0-3])             # hours
    19→:([0-5][0-9])                  # minutes
    20→(?:
      →…
    26→RE_NUMBER: Final = re.compile(
    27→    r"""
    28→0
    29→(?:
    30→    x[0-9A-Fa-f](?:_?[0-9A-Fa-f])*   # hex
    31→    |
    32→    b[01](?:_?[01])*                 # bin
    33→    |
    34→    o[0-7](?:_?[0-7])*               # oct
    35→)
    36→|
    37→[+-]?(?:0|[1-9](?:_?[0-9])*)         # dec, integer part
    38→(?P<floatpart>
    39→    (?:\.[0-9](?:_?[0-9])*)?         # optional fractional part
    40→    (?:[eE][+-]?[0-9](?:_?[0-9])*)?  # optional exponent part
    41→)
    42→""",
    43→    flags=re.VERBOSE,
    44→)
    45→RE_LOCALTIME: Final = re.compile(_TIME_RE_STR, flags=re.VERBOSE)
    46→RE_DATETIME: Final = re.compile(
    47→    rf"""
    48→([0-9]{{4}})-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])  # date, e.g. 1988-10-27
    49→(?:
    50→    [Tt ]
    51→    {_TIME_RE_STR}
    52→    (?:([Zz])|([+-])([01][0-9]|2[0-3]):([0-5][0-9]))?  # optional time offset
    53→)?
    54→""",
    55→    flags=re.VERBOSE,
    56→)
    59→def match_to_datetime …
    95→# No need to limit cache size. This is only ever called on input
    96→# that matched RE_DATETIME, so there is an implicit bound of
    97→# 24 (hours) * 60 (minutes) * 2 (offset direction) = 2880.
    98→@lru_cache(maxsize=None)
    99→def cached_tz(hour_str: str, minute_str: str, sign_str: str) -> timezone:
   100→    sign = 1 if sign_str == "+" else -1
   101→    return timezone(
   102→        timedelta(
   103→            hours=sign * int(hour_str),
   104→            minutes=sign * int(minute_str),
   105→        )
   106→    )
   109→def match_to_localtime …
   116→def match_to_number …
_types.py
     5→from typing import Any, Callable, Tuple
